# FPSE_f25_project

./: Design.md  README.md  RESET_FOLDED_PLAN.md  dune-project  hello_world.opam  poker.opam
_coverage/: index.html
_coverage/src/lib/: bot.ml.html  bot_best_hand.ml.html  bot_hand_only.ml.html  card.ml.html  card_set.ml.html  chips.ml.html  deck.ml.html  player.ml.html  round.ml.html  table.ml.html
demo/: demo.txt  demo_all.ml  dune
src-test/: bot_tests.ml  cards_tests.ml  dune  round_tests.ml  table_tests.ml  tests.ml
src/lib/: Design.md  bot.ml  bot.mli  bot_best_hand.ml  bot_best_hand.mli  bot_hand_only.ml  bot_hand_only.mli  card.ml  card.mli  card_set.ml  card_set.mli  chips.ml  chips.mli  deck.ml  deck.mli  dune  dune_interface.txt  game.ml  game.mli  ideas.txt  interface.ml  interface.mli  notes.txt  player.ml  player.mli  round.ml  round.mli  table.ml  table.mli
