(library
 (name cards_tests)
 (modules cards_tests)
 (libraries
  ounit2
  core
  card
  card_set
  deck))

(library
  (name table_tests)
  (modules table_tests)
  (libraries
    ounit2
    core
    card
    deck
    bot
    player
    table))

(library
  (name round_tests)
  (modules round_tests)
  (libraries
    ounit2
    core
    card
    bot 
    player
    table
    round))

(test
 (name tests)
 (modules tests)
 (libraries
  ounit2
  core
  cards_tests
  table_tests
  round_tests
  bot_best_hand
  bot_hand_only
  bot
  card_set
  card
  deck
  game
  player
  round
  table))