(library
 (name card)
 (modules card)
 (libraries core)
 (preprocess
 (pps ppx_jane)))

(library
 (name deck)
 (modules deck)
 (libraries core card)
 (preprocess
 (pps ppx_jane)))

(library
 (name player)
 (modules player)
 (libraries core card bot)
 (preprocess
 (pps ppx_jane)))

(library
 (name card_set)
 (modules card_set)
 (libraries core card)
 (preprocess
 (pps ppx_jane)))

(library
 (name game)
 (modules game)
 (libraries core card deck table round)
 (preprocess
 (pps ppx_jane)))

(library
 (name bot)
 (modules bot)
 (libraries core card game round)
 (preprocess
 (pps ppx_jane)))

(library
 (name interface)
 (modules_without_implementation interface)
 (libraries core card player game round)
 (preprocess
 (pps ppx_jane)))

(library
 (name table)
 (modules table)
 (libraries core player)
 (preprocess
 (pps ppx_jane)))

(library
 (name round)
 (modules round)
 (libraries core player) 
 (preprocess
 (pps ppx_jane)))
