(library
 (name card)
 (modules card)
 (libraries core chips)
 (preprocess
 (pps ppx_jane)))

(library
 (name chips)
 (modules chips)
 (libraries core)
 (preprocess
 (pps ppx_jane)))

(library
 (name deck)
 (modules deck)
 (libraries core card)
 (preprocess
 (pps ppx_jane)))

(library
 (name player)
 (modules player)
 (libraries core card bot chips)
 (preprocess
 (pps ppx_jane)))

(library
 (name card_set)
 (modules card_set)
 (libraries core card)
 (preprocess
 (pps ppx_jane)))

(library
 (name bot_hand_only)
 (modules bot_hand_only)
 (libraries core card deck card_set)
 (preprocess
 (pps ppx_jane)))

(library
 (name bot_best_hand)
 (modules bot_best_hand)
 (libraries core card deck card_set)
 (preprocess
 (pps ppx_jane)))

(library
 (name bot)
 (modules bot)
 (libraries core card deck card_set bot_hand_only bot_best_hand chips)
 (preprocess
 (pps ppx_jane)))

(library
 (name table)
 (modules table)
 (libraries core player)
 (preprocess
 (pps ppx_jane)))

(library
 (name round)
 (modules round)
 (libraries core card player table chips)
 (preprocess
 (pps ppx_jane)))

; (library
;  (name interface)
;  (modules interface)
;  (libraries core card player round game)
;  (preprocess
;  (pps ppx_jane)))

(library
 (name game)
 (modules game)
 (libraries core card deck table round chips)
 (preprocess
 (pps ppx_jane)))

(library
 (name interface)
 (modules interface)
 (libraries core card game round player table chips)
 (preprocess
 (pps ppx_jane)
))
